# SWMManywhere

./: .coverage-tmp.html  .gitignore  .gitmodules  .markdown-link-check.json  .pre-commit-config.yaml  404.html  AUTHORS.md  CITATION.cff  CONTRIBUTING.md  README.md  custom.css  dev-requirements.txt  doc-requirements.txt  index.html  mkdocs.yml  objects.inv  pixi.toml  precommit_output  py2exe_setup.py  pyinstaller_setup.spec  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: auto-merge.yml  check-links.yml  ci.yml  ci_template.yml  publish.yml
AUTHORS/: index.html
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
HISTORY/: index.html
config_guide/: index.html
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  config_guide.md  graphfcns_guide.md  index.md  metrics_guide.md  parameters_guide.md  quickstart.md  reference-defs.md  reference-filepaths.md  reference-geospatial-utilities.md  reference-graph-utilities.md  reference-logging.md  reference-metric-utilities.md  reference-overview.md  reference-parameters.md  reference-post-processing.md  reference-preprocessing.md  reference.md
docs/notebooks/: custom.css  custom_data_demo.py  extended_demo.py  quickstart.py  temp.py  validation_demo.py
docs/paper/: apa.csl  paper.bib  paper.md
docs/snippets/: minimum_viable_template.yml
graphfcns_guide/: index.html
maintainer_state/: fix_pr_followup_new_comments.txt  last_verify.txt  pr_head_context.txt
metrics_guide/: index.html
netcomp/: README.md  __init__.py
netcomp/distance/: __init__.py  exact.py  features.py
netcomp/linalg/: __init__.py  eigenstuff.py  fast_bp.py  matrices.py  resistance.py
paper/: paper.bib
paper/paper/: index.html
parameters_guide/: index.html
quickstart/: index.html
reference/: index.html
reference-defs/: index.html
reference-filepaths/: index.html
reference-geospatial-utilities/: index.html
reference-graph-utilities/: index.html
reference-logging/: index.html
reference-metric-utilities/: index.html
reference-overview/: index.html
reference-parameters/: index.html
reference-post-processing/: index.html
reference-preprocessing/: index.html
search/: search_index.json
snippets/: cli-call.sh
src/netcomp/: README.md  exception.py
src/netcomp/distance/: __init__.py  exact.py  features.py
src/netcomp/linalg/: __init__.py  matrices.py  resistance.py
src/swmmanywhere/: __init__.py  __main__.py  filepaths.py  geospatial_utilities.py  graph_utilities.py  logging.py  metric_utilities.py  parameters.py  post_processing.py  prepare_data.py  preprocessing.py  shortest_path_utils.py  swmmanywhere.py  utilities.py
src/swmmanywhere/defs/: __init__.py  basic_drainage_all_bits.inp  bellinge_small.inp  bellinge_small_graph.json  copy_test_data.py  demo_config.yml  iso_converter.yml  schema.yml  swmm_conversion.yml
src/swmmanywhere/examples/: data.py
src/swmmanywhere/graphfcns/: __init__.py  design_graphfcns.py  network_cleaning_graphfcns.py  subcatchment_graphfcns.py  topology_graphfcns.py
src/swmmanywhere/misc/: debug_derive_rc.py  debug_metrics.py  debug_topology.py
swmmanywhere/: __init__.py  __main__.py  custom_logging.py  downloaders.py  filepaths.py  geospatial_operations.py  geospatial_utilities.py  graph_utilities.py  logging.py  metric_utilities.py  parameters.py  post_processing.py  prepare_data.py  preprocessing.py  shortest_path_utils.py  swmm_text_tools.py  swmmanywhere.py  topology_graphfcns.py  utilities.py  utils.py  whitebox_utils.py
swmmanywhere/defs/: basic_drainage_all_bits.inp  basic_drainage_wq.ini  basic_drainage_wq.inp  parameter_defaults.yml  schema.yml  swmm_conversion.yml
swmmanywhere/examples/: demo_graph.json
swmmanywhere/graphfcns/: __init__.py  network_cleaning_graphfcns.py  outfall_graphfcns.py  outlet_graphfcns.py  topology_graphfcns.py
swmmanywhere/misc/: debug_derive_rc.py  debug_interpolation.py  debug_metrics.py  debug_topology.py  prepare_subselect_batch.py  subselect.py
swmmanywhere/paper/: experimenter.py  generate_demo.py  perform_sa.py  plotting.py  submit_icl_example
tests/: __init__.py  conftest.py  test_cli.py  test_downloaders.py  test_experimenter.py  test_fake.py  test_geospatial.py  test_geospatial_utilities.py  test_graph_utilities.py  test_logging.py  test_metric_utilities.py  test_parameters.py  test_plotting.py  test_post_processing.py  test_prepare_data.py  test_preprocessing.py  test_shortest_path_utils.py  test_swmm_text_tools.py  test_swmmanywhere.py  test_utils.py
tests/test_data/: building.geojson  building.geoparquet  custom_graphfcns.py  custom_io.py  custom_metrics.py  custom_parameters.py  demo_config.yml  elevation.tif  graph_topo_derived.json  street_graph.json
tests/test_data/bellinge_small/: bellinge_small.out  bellinge_small.rpt  edges.geojson  elevation.tif  real_bbox.json  real_results.parquet
tmpbs5q4d7x/my_first_swmm/bbox_1/model_2/: assign_id_graph.json  assign_id_nodes.geojson  calculate_contributing_area_graph.json  calculate_weights_graph.json  clip_to_catchments_edges.geojson  clip_to_catchments_graph.json  config.yml  derive_topology_edges.geojson  derive_topology_graph.json  double_directed_graph.json  identify_outfalls_graph.json  identify_outfalls_nodes.geojson  merge_street_nodes_edges.geojson  merge_street_nodes_graph.json  merge_street_nodes_nodes.geojson  model_2.inp  model_2.out  model_2.rpt  pipe_by_pipe_edges.geojson  pipe_by_pipe_graph.json  remove_non_pipe_allowable_links_edges.geojson  remove_non_pipe_allowable_links_graph.json  remove_parallel_edges_graph.json  remove_parallel_edges_nodes.geojson  results.parquet  set_chahinian_angle_edges.geojson  set_chahinian_angle_graph.json  set_chahinian_slope_edges.geojson  set_chahinian_slope_graph.json  set_elevation_graph.json  set_surface_slope_graph.json  split_long_edges_graph.json  split_long_edges_nodes.geojson  streetcover.geoparquet  subbasins.geoparquet  subcatchments.geoparquet  to_undirected_graph.json
workspace/memory/: brain.db
workspace/state/: memory_hygiene_state.json
(+35 files in other folders)
